# shiftsimulator

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASES.md  pyproject.toml
.claude/skills/add-boat-strategy/: SKILL.md
.claude/skills/add-wind-scenario/: SKILL.md
.claude/skills/run-compare/: SKILL.md
.claude/skills/validate-physics/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  promote.yml
docs/: roadmap.md
docs/specs/: admin-page.md  deploy-corvopi-live.md  feedback-footer.md  start-line.md
scenarios/: oscillating_demo.json  persistent_demo.json  start_line_badair.json
scripts/: deploy.sh  setup.sh
scripts/nginx/: shiftsim.conf
scripts/systemd/: shiftsim.service
src/shiftsim/: __init__.py  admin.py  badair.py  boat.py  cli.py  course.py  geometry.py  metrics.py  polar.py  report.py  scenario.py  serve.py  simulator.py  strategy.py  wind.py
tests/: run_all.py  test_admin.py  test_geometry.py  test_physics.py  test_polar.py  test_report.py  test_serve_limits.py  test_simulator.py  test_start_line.py  test_version.py  test_wind.py
web/: admin.html  docs.html  index.html
