[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "shiftsim"
version = "0.1.0"
description = "A sailing tactics simulator for studying when to tack or gybe in wind shifts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []   # core engine is pure standard library, by design

[project.optional-dependencies]
# Optional nicer charts; the engine also emits self-contained SVG with no deps.
plots = ["matplotlib"]

# Dev toolchain — managed by uv (`uv sync` installs this group). The deployed
# Pi never installs these: it runs the pure-stdlib engine on system python3.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
shiftsim = "shiftsim.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

# ---------------------------------------------------------------------------
# Ruff — linting + formatting (mirrors helmlog's config; line length 100)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations (enforce type hints)
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["shiftsim"]

# ---------------------------------------------------------------------------
# Mypy — type checking
#
# Ratcheting toward helmlog's `strict = true`, but not there yet: full strict
# wants the JSON (de)serialisation layer (every `to_dict`/`from_dict`) retyped
# from bare `dict` to typed dicts first, which is a separate, larger change.
# Tracked as a follow-up. This baseline still catches real type errors in
# annotated code without forcing that retype into the toolchain PR.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
mypy_path = "src"
